<resources>
    <string name="app_name">PeriodTrackerEE296</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_date">ADD DATE</string>
    <string name="days_until_next_period">DAYS UNTIL NEXT PERIOD</string>
    <string name="add_mood">ADD MOOD</string>
    <string name="calendar">CALENDAR</string>
    <string name="_0">0</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_is_your_mood_today">How is your mood today?</string>
    <string name="bad">BAD</string>
    <string name="okay">OKAY</string>
    <string name="great">GREAT</string>
    <string name="todo">TODO</string>
    <string name="when_did_your_period_start">When did your period start?</string>
    <string name="title_activity_cycle">Cycle</string>
</resources>