<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <TextView
        android:id="@+id/daysUntilNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_until_next_period"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/countdownDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="237dp" />

    <Button
        android:id="@+id/addDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_date"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/showCalendar"
        app:layout_constraintStart_toEndOf="@+id/addMood"
        app:layout_constraintTop_toBottomOf="@+id/daysUntilNext" />

    <Button
        android:id="@+id/addMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/add_mood"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysUntilNext" />

    <Button
        android:id="@+id/showCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/calendar"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysUntilNext" />

    <TextView
        android:id="@+id/countdownDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/addDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>